--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "scripts": {
